--- a/Html_CSS/contact_form1/index.html
+++ b/Html_CSS/contact_form1/index.html
@@ -16,11 +16,11 @@
             <h1>Contact</h1>
             <div>
                 <label for="name">Nom</label>
-                <input type="text" name="name" id="name">
+                <input type="text" name="name" id="name" required>
             </div>
             <div>
                 <label for="email">Email</label>
-                <input type="text" name="email" id="email">
+                <input type="text" name="email" id="email" required>
             </div>
             <div>
                 <label for="message">Message</label>
