--- a/Html_CSS/grid_1/index.html
+++ b/Html_CSS/grid_1/index.html
@@ -13,28 +13,35 @@
     <div class="ads"></div>
     <nav></nav>
     <main>
+       
         <section>
             <article class="box_1">
+                <h2>section</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, porro eos earum reprehenderit
                     nemo delectus rerum doloremque assumenda expedita id!</p>
             </article>
             <article class="box_2">
+                <h2>section</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, porro eos earum reprehenderit
                     nemo delectus rerum doloremque assumenda expedita id!</p>
             </article>
             <article class="box_3">
+                <h2>section</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, porro eos earum reprehenderit
                     nemo delectus rerum doloremque assumenda expedita id!</p>
             </article>
             <article class="box_4">
+                <h2>section</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, porro eos earum reprehenderit
                     nemo delectus rerum doloremque assumenda expedita id!</p>
             </article>
             <article class="box_5">
+                <h2>section</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, porro eos earum reprehenderit
                     nemo delectus rerum doloremque assumenda expedita id!</p>
             </article>
             <article class="box_6">
+                <h2>section</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, porro eos earum reprehenderit
                     nemo delectus rerum doloremque assumenda expedita id!</p>
             </article>
