--- a/Html_CSS/grid_1/index.html
+++ b/Html_CSS/grid_1/index.html
@@ -9,11 +9,16 @@
 </head>
 
 <body>
-    <header>Nav</header>
+    <header>
+        <h1>Header</h1>
+    </header>
     <div class="ads"></div>
-    <nav></nav>
+    <nav>
+        <h1>Ads</h1>
+
+    </nav>
     <main>
-       
+        <h1>Article</h1>
         <section>
             <article class="box_1">
                 <h2>section</h2>
@@ -47,7 +52,10 @@
             </article>
         </section>
     </main>
-    <footer>footer</footer>
+    <footer>
+        <h1>Footer</h1>
+
+    </footer>
 </body>
 
 </html>
