--- a/Html_CSS/grid_2/index.html
+++ b/Html_CSS/grid_2/index.html
@@ -10,13 +10,23 @@
 
 <body>
     <header>
-
+        1
     </header>
-    <nav></nav>
+    <nav>
+        2
+    </nav>
+    <article class="item3">3</article>
+    <article class="item4">4</article>
+    <article class="item5">5</article>
+    <article class="item6">6</article>
+    <article class="item7">7</article>
+    <article class="item8">8</article>
+    <article class="item9">9</article>
     <main>
-
     </main>
-    <footer></footer>
+    <footer>
+        10
+    </footer>
 </body>
 
 </html>
