--- a/Html_CSS/grid_2/index.html
+++ b/Html_CSS/grid_2/index.html
@@ -10,22 +10,22 @@
 
 <body>
     <header>
-        1
+        <h1>1</h1>
     </header>
     <nav>
-        2
+        <h1>2</h1>
     </nav>
-    <article class="item3">3</article>
-    <article class="item4">4</article>
-    <article class="item5">5</article>
-    <article class="item6">6</article>
-    <article class="item7">7</article>
-    <article class="item8">8</article>
-    <article class="item9">9</article>
+    <article class="item3"><h1>3</h1></article>
+    <article class="item4"><h1>4</h1></article>
+    <article class="item5"><h1>5</h1></article>
+    <article class="item6"><h1>6</h1></article>
+    <article class="item7"><h1>7</h1></article>
+    <article class="item8"><h1>8</h1></article>
+    <article class="item9"><h1>9</h1></article>
     <main>
     </main>
     <footer>
-        10
+        <h1>10</h1>
     </footer>
 </body>
 
