--- a/Html_CSS/TP_Vignoble/index.html
+++ b/Html_CSS/TP_Vignoble/index.html
@@ -40,29 +40,113 @@
         </nav>
     </header>
     <main>
-        <span class="logo">
-            <img src="./img/logo.png" alt="domainr">
-        </span>
-        <article class="main_content">
-            <img src="./img/raisin.jpg" alt="cuve de vin ">
-            <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-        </article>
+        <article class="container">
 
-        <article class="card_content">
-            <article class="card card_1">
-
-                <span class="icon"><img src="./img/icon-1.png" alt="">
-                    <h2>La cave </h2>
-                </span>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi excepturi sapiente nesciunt molestias
-                    aliquid porro suscipit, placeat distinctio unde nisi quaerat </p>
-                <input type="submit" value="Lire la suite">
+            <span class="logo">
+                <img src="./img/logo.png" alt="domainr">
+            </span>
+            <article class="main_content">
+                <img src="./img/raisin.jpg" alt="cuve de vin ">
+                <h1>Lorem ipsum dolor sit amet consectetur.</h1>
             </article>
 
+            <article class="card_content">
+                <article class="card card_1">
+
+                    <span class="icon"><img src="./img/icon-1.png" alt="">
+                    </span>
+                    <h3>La cave </h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi excepturi sapiente nesciunt
+                        molestias
+                        aliquid porro suscipit, placeat distinctio unde nisi quaerat </p>
+                    <input type="button" class="btn" value="Lire la suite">
+                </article>
+                <article class="card card_1">
+
+                    <span class="icon"><img src="./img/icon-2.png" alt="">
+                    </span>
+                    <h3>Le Vigneron</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi excepturi sapiente nesciunt
+                        molestias
+                        aliquid porro suscipit, placeat distinctio unde nisi quaerat </p>
+                    <input type="button" class="btn" value="Lire la suite">
+                </article>
+                <article class="card card_1">
+
+                    <span class="icon"><img src="./img/icon-3.png" alt="">
+                    </span>
+                    <h3>Les Produits</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi excepturi sapiente nesciunt
+                        molestias
+                        aliquid porro suscipit, placeat distinctio unde nisi quaerat </p>
+                    <input type="button" class="btn" value="Lire la suite">
+                </article>
+            </article>
         </article>
     </main>
+    <section>
+        <article class="selection">
+            <h2>Cadeaux et accessoires</h2>
+            <div class="wrapper">
+
+                <ul class="menu_vin">
+
+                    <li>
+                        <img src="./img/liste.png" alt="">
+                        <a href="#">Gigondas</a>
+                    </li>
+                    <li>
+                        <img src="./img/liste.png" alt="">
+                        <a href="#">Vacqueryras</a>
+                    </li>
+                    <li>
+                        <img src="./img/liste.png" alt="">
+                        <a href="#">Rasteau</a>
+                    </li>
+                    <li>
+                        <img src="./img/liste.png" alt="">
+                        <a href="#">Bourgogne</a>
+                    </li>
+                    <li>
+                        <img src="./img/liste.png" alt="">
+                        <a href="#">Bordeaux</a>
+                    </li>
+                    <li>
+                        <img src="./img/liste.png" alt="">
+                        <a href="#">Sauterne</a>
+                    </li>
+                </ul>
+                <article class="carte_cadeau">
+                    <img src="./img/home-img1.jpg" alt="">
+                    <a href="#"></a>
+
+                    <article class="block">
 
 
+                        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vitae nostrum culpa saepe
+                            illum.
+                            Voluptas totam distinctio ea quo iste molestias facere tenetur, quibusdam maiores eos ut
+                            nisi.
+                            Perferendis, dolorem?</p>
+                        <input type="button" class="btn" value="Lire la suite">
+                    </article>
+                </article>
+        </article>
+        </div>
+    </section>
+    <footer>
+        <div class="menu_footer">
+            <ul>
+                <il><a href="#">Accueil</a></il>
+                <il><a href="#">Le Cave</a></il>
+                <il><a href="#">Le Vigneron</a></il>
+                <il><a href="#">Les produits</a></il>
+                <il><a href="#">Contact</a></il>
+            </ul>
+
+        </div>
+    </footer>
 </body>
 
 </html>
