--- a/Html_CSS/Vignoble/index.html
+++ b/Html_CSS/Vignoble/index.html
@@ -76,7 +76,41 @@
         </article>
 
     </main>
-    <section></section>
+    <section>
+        <article class="bloc">
+            <article class="selection">
+                <h1>Notre Selection</h1>
+                <ul>
+                    <li>
+                        <img src="./img/liste.png" alt="">
+                        <a href="#">Gigondas</a></li>
+                    <li>
+                        <img src="./img/liste.png" alt="">
+                        <a href="#">Vacqueryras</a></li>
+                    <li>
+                        <img src="./img/liste.png" alt="">
+                        <a href="#">Rasteau</a></li>
+                    <li>
+                        <img src="./img/liste.png" alt="">
+                        <a href="#">Bourgogne</a></li>
+                    <li>
+                        <img src="./img/liste.png" alt="">
+                        <a href="#">Bordeaux</a></li>
+                    <li>
+                        <img src="./img/liste.png" alt="">
+                        <a href="#">Sauterne</a></li>
+                </ul>
+            </article>
+            <article class="cadeaux_accessoires">
+                <h1>Cadeaux et accessoires</h1>
+                <article class="cadeaux_accessoires">
+                    <img src="./img/home-img1.jpg" alt="bouteille de vin rouge">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit soluta nihil veniam itaque modi obcaecati ullam iste fugit beatae id, maxime quia officiis iure harum quod provident dolore cum dignissimos!</p>
+                    <input type="button" value="Lire la suite" class="btn">
+                </article>
+            </article>
+        </article>
+    </section>
     <footer></footer>
 </body>
 
