--- a/Html_CSS/gid_3/index.html
+++ b/Html_CSS/gid_3/index.html
@@ -4,19 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>grid 3</title>
 </head>
 
 <body>
-    <header class="box">
-        
-    </header>
-    <nav class="box">menu</nav>
-    <div class="fil_ariane box"></div>
-    <main class="box"></main>
-    <aside></aside>
-    <footer class="box"></footer>
+    <span class="logo bloc">logo</span>
+    <header class="bloc">menu</header>
+    <div class="fil_ariane bloc">fil d'ariane</div>
+    <!-- <main >
+        <article class="bloc">
+            <h2>Article</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sequi deleniti consequuntur praesentium
+                aut, facilis at ut delectus ipsum earum qui, ratione impedit explicabo id mollitia corporis, est fugiat
+                consectetur?</p>
+        </article>
+        <article class="bloc">
+            <h2>Article</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sequi deleniti consequuntur praesentium
+                aut, facilis at ut delectus ipsum earum qui, ratione impedit explicabo id mollitia corporis, est fugiat
+                consectetur?</p>
+        </article><article class="bloc">
+            <h2>Article</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sequi deleniti consequuntur praesentium
+                aut, facilis at ut delectus ipsum earum qui, ratione impedit explicabo id mollitia corporis, est fugiat
+                consectetur?</p>
+        </article><article class="bloc">
+            <h2>Article</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sequi deleniti consequuntur praesentium
+                aut, facilis at ut delectus ipsum earum qui, ratione impedit explicabo id mollitia corporis, est fugiat
+                consectetur?</p>
+        </article><article class="bloc">
+            <h2>Article</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sequi deleniti consequuntur praesentium
+                aut, facilis at ut delectus ipsum earum qui, ratione impedit explicabo id mollitia corporis, est fugiat
+                consectetur?</p>
+        </article><article class="bloc">
+            <h2>Article</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sequi deleniti consequuntur praesentium
+                aut, facilis at ut delectus ipsum earum qui, ratione impedit explicabo id mollitia corporis, est fugiat
+                consectetur?</p>
+        </article>
+
+    </main> -->
+    <aside class="bloc">aside</aside>
+    <footer class="bloc">footer</footer>
 </body>
 
 </html>
