--- a/Html_CSS/TP_Vignoble/index.html
+++ b/Html_CSS/TP_Vignoble/index.html
@@ -10,8 +10,11 @@
 
 <body>
     <header>
+        <span class="logo">
+            <img src="./img/logo.png" alt="domainr">
+        </span>
         <nav>
-            <ul>
+            <ul class="menu">
                 <li><a href="#">Accueil</a></li>
                 <li><a href="#">HTML 5</a>
                     <ul class="sous_menu">
@@ -42,98 +45,102 @@
     <main>
         <article class="container">
 
-            <span class="logo">
-                <img src="./img/logo.png" alt="domainr">
-            </span>
             <article class="main_content">
                 <img src="./img/raisin.jpg" alt="cuve de vin ">
                 <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+
             </article>
+            <hr>
 
             <article class="card_content">
                 <article class="card card_1">
 
                     <span class="icon"><img src="./img/icon-1.png" alt="">
                     </span>
-                    <h3>La cave </h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi excepturi sapiente nesciunt
-                        molestias
-                        aliquid porro suscipit, placeat distinctio unde nisi quaerat </p>
+                    <h4>La cave </h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore similique tenetur autem labore
+                        corrupti? Tempore.</p>
                     <input type="button" class="btn" value="Lire la suite">
                 </article>
                 <article class="card card_1">
 
                     <span class="icon"><img src="./img/icon-2.png" alt="">
                     </span>
-                    <h3>Le Vigneron</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi excepturi sapiente nesciunt
-                        molestias
-                        aliquid porro suscipit, placeat distinctio unde nisi quaerat </p>
+                    <h4>Le Vigneron</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore similique tenetur autem labore
+                        corrupti? Tempore.</p>
                     <input type="button" class="btn" value="Lire la suite">
                 </article>
                 <article class="card card_1">
 
                     <span class="icon"><img src="./img/icon-3.png" alt="">
                     </span>
-                    <h3>Les Produits</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi excepturi sapiente nesciunt
-                        molestias
-                        aliquid porro suscipit, placeat distinctio unde nisi quaerat </p>
+                    <h4>Les Produits</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore similique tenetur autem labore
+                        corrupti? Tempore.</p>
                     <input type="button" class="btn" value="Lire la suite">
                 </article>
             </article>
+            <hr>
         </article>
     </main>
     <section>
         <article class="selection">
-            <h2>Cadeaux et accessoires</h2>
-            <div class="wrapper">
-
-                <ul class="menu_vin">
-
-                    <li>
-                        <img src="./img/liste.png" alt="">
-                        <a href="#">Gigondas</a>
-                    </li>
-                    <li>
-                        <img src="./img/liste.png" alt="">
-                        <a href="#">Vacqueryras</a>
-                    </li>
-                    <li>
-                        <img src="./img/liste.png" alt="">
-                        <a href="#">Rasteau</a>
-                    </li>
-                    <li>
-                        <img src="./img/liste.png" alt="">
-                        <a href="#">Bourgogne</a>
-                    </li>
-                    <li>
-                        <img src="./img/liste.png" alt="">
-                        <a href="#">Bordeaux</a>
-                    </li>
-                    <li>
-                        <img src="./img/liste.png" alt="">
-                        <a href="#">Sauterne</a>
-                    </li>
-                </ul>
-                <article class="carte_cadeau">
-                    <img src="./img/home-img1.jpg" alt="">
-                    <a href="#"></a>
-
-                    <article class="block">
-
-
-                        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vitae nostrum culpa saepe
-                            illum.
-                            Voluptas totam distinctio ea quo iste molestias facere tenetur, quibusdam maiores eos ut
-                            nisi.
-                            Perferendis, dolorem?</p>
-                        <input type="button" class="btn" value="Lire la suite">
+          
+            <article class="cards_selection">
+                <div class="wrapper">
+                    <article class="list">
+                        <h1>Notre sélection</h1>
+                        <ul class="menu_vin">
+    
+                            <li>
+                                <img src="./img/liste.png" alt="">
+                                <a href="#">Gigondas</a>
+                            </li>
+                            <li>
+                                <img src="./img/liste.png" alt="">
+                                <a href="#">Vacqueryras</a>
+                            </li>
+                            <li>
+                                <img src="./img/liste.png" alt="">
+                                <a href="#">Rasteau</a>
+                            </li>
+                            <li>
+                                <img src="./img/liste.png" alt="">
+                                <a href="#">Bourgogne</a>
+                            </li>
+                            <li>
+                                <img src="./img/liste.png" alt="">
+                                <a href="#">Bordeaux</a>
+                            </li>
+                            <li>
+                                <img src="./img/liste.png" alt="">
+                                <a href="#">Sauterne</a>
+                            </li>
+                        </ul>
                     </article>
-                </article>
+                    <article class="carte_cadeau">
+                        <h2>Cadeaux et accessoires</h2>
+                        <img src="./img/home-img1.jpg" alt="">
+                        <a href="#"></a>
+
+                        <article class="block">
+
+
+                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vitae nostrum culpa saepe
+                                illum.
+                                Voluptas totam distinctio ea quo iste molestias facere tenetur, quibusdam maiores eos ut
+                                nisi.
+                                Perferendis, dolorem?</p>
+                            <input type="button" class="btn" value="Lire la suite">
+                        </article>
+                    </article>
+            </article>
+
+            </div>
         </article>
-        </div>
+
     </section>
     <footer>
         <div class="menu_footer">
