--- a/Html_CSS/TP_Vignoble/index.html
+++ b/Html_CSS/TP_Vignoble/index.html
@@ -86,13 +86,13 @@
     </main>
     <section>
         <article class="selection">
-          
+
             <article class="cards_selection">
                 <div class="wrapper">
                     <article class="list">
-                        <h1>Notre sélection</h1>
+                        <h3>Notre sélection</h3>
                         <ul class="menu_vin">
-    
+
                             <li>
                                 <img src="./img/liste.png" alt="">
                                 <a href="#">Gigondas</a>
@@ -120,20 +120,23 @@
                         </ul>
                     </article>
                     <article class="carte_cadeau">
-                        <h2>Cadeaux et accessoires</h2>
-                        <img src="./img/home-img1.jpg" alt="">
-                        <a href="#"></a>
+                        <h3>Cadeaux et accessoires</h3>
+                        <article class="card_content">
 
-                        <article class="block">
+                            <img src="./img/home-img1.jpg" alt="">
 
+                            <article class="bloc">
 
-                            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vitae nostrum culpa saepe
-                                illum.
-                                Voluptas totam distinctio ea quo iste molestias facere tenetur, quibusdam maiores eos ut
-                                nisi.
-                                Perferendis, dolorem?</p>
-                            <input type="button" class="btn" value="Lire la suite">
+                                <h4>Lorem ipsum dolor sit amet</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto vitae nostrum culpa
+                                    saepe
+                                    illum.
+                                    Voluptas totam distinctio ea quo iste molestias facere tenetur, quibusdam maiores
+                                    eos ut
+                                    nisi.
+                                    Perferendis, dolorem?</p>
+                                <input type="button" class="btn" value="Lire la suite">
+                            </article>
                         </article>
                     </article>
             </article>
