--- a/Html_CSS/gid_3/index.html
+++ b/Html_CSS/gid_3/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#4285f4" />
+
     <link rel="stylesheet" href="./css/style.css">
     <title>grid 3</title>
 </head>
@@ -12,7 +14,7 @@
     <span class="logo bloc">logo</span>
     <header class="bloc">menu</header>
     <div class="fil_ariane bloc">fil d'ariane</div>
-    <!-- <main >
+    <main>
         <article class="bloc">
             <h2>Article</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sequi deleniti consequuntur praesentium
@@ -24,29 +26,33 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sequi deleniti consequuntur praesentium
                 aut, facilis at ut delectus ipsum earum qui, ratione impedit explicabo id mollitia corporis, est fugiat
                 consectetur?</p>
-        </article><article class="bloc">
+        </article>
+        <article class="bloc">
             <h2>Article</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sequi deleniti consequuntur praesentium
                 aut, facilis at ut delectus ipsum earum qui, ratione impedit explicabo id mollitia corporis, est fugiat
                 consectetur?</p>
-        </article><article class="bloc">
+        </article>
+        <article class="bloc">
             <h2>Article</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sequi deleniti consequuntur praesentium
                 aut, facilis at ut delectus ipsum earum qui, ratione impedit explicabo id mollitia corporis, est fugiat
                 consectetur?</p>
-        </article><article class="bloc">
+        </article>
+        <article class="bloc">
             <h2>Article</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sequi deleniti consequuntur praesentium
                 aut, facilis at ut delectus ipsum earum qui, ratione impedit explicabo id mollitia corporis, est fugiat
                 consectetur?</p>
-        </article><article class="bloc">
+        </article>
+        <article class="bloc">
             <h2>Article</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sequi deleniti consequuntur praesentium
                 aut, facilis at ut delectus ipsum earum qui, ratione impedit explicabo id mollitia corporis, est fugiat
                 consectetur?</p>
         </article>
 
-    </main> -->
+    </main>
     <aside class="bloc">aside</aside>
     <footer class="bloc">footer</footer>
 </body>
