--- a/Html_CSS/cards/index.html
+++ b/Html_CSS/cards/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    
+    <div class="bloc">
+        <div class="bloc1"></div>
+        <div class="bloc2"></div>
+        <div class="bloc3"></div>
+        <div class="bloc4"></div>
+    </div>
 </body>
 
 </html>
