--- a/Html_CSS/cards/index.html
+++ b/Html_CSS/cards/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="bloc">
-        <div class="bloc1"></div>
-        <div class="bloc2"></div>
-        <div class="bloc3"></div>
-        <div class="bloc4"></div>
+        <div class="bloc_anime bloc_main"></div>
+        <div class="bloc_anime bloc_main"></div>
+        <div class="bloc_anime bloc_main"></div>
+        <div class="bloc_anime bloc_main"></div>
     </div>
 </body>
 
