--- a/JS/Exercice_1/index.html
+++ b/JS/Exercice_1/index.html
@@ -12,12 +12,12 @@
    
     <form action="" method="post">
         <div>
-            <input type="text" name="date" id="date">
+            <input type="text" name="date" id="date" value="">
             <input type="button" value="date" id="btnDate">
         </div>
         <div>
-            <input type="text" name="time" id="time">
-            <input type="button" value="date" id="btnTime">
+            <input type="text" name="time" id="time" value="">
+            <input type="button" value="time" id="btnTime">
         </div>
     </form>
 </body>
