--- a/JS/Exercice_2/index.html
+++ b/JS/Exercice_2/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./js/main.js" defer></script>
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Exercice js</title>
 </head>
 
@@ -14,7 +15,7 @@
             <legend>Calculs dynamiques</legend>
             <div>
                 <label for="qte">Qté</label>
-                <input type="text" name="qte" id="qte" value="">
+                <input type="number" name="qte" id="qte" min="1" max="1000000" value="" onchange="controle()">
 
                 <label for="prixUnit">Prix unitaire</label>
                 <input type="text" name="prixUnit" id="prixUnit" value="">
@@ -25,7 +26,7 @@
             </div>
             <div>
                 <label for="qte">Qté</label>
-                <input type="text" name="qte" id="qte" value="">
+                <input type="number" name="qte" id="qte" min="1" max="1000000" value="" onchange="controle()">
 
                 <label for="prixUnit">Prix unitaire</label>
                 <input type="text" name="prixUnit" id="prixUnit" value="">
