--- a/JS/Exercice_2/index.html
+++ b/JS/Exercice_2/index.html
@@ -12,33 +12,30 @@
 <body>
     <form action="" method="post">
         <fieldset>
-            <legend>Calculs dynamiques</legend>
             <div>
-                <label for="qte">Qté</label>
-                <input type="number" name="qte" id="qte" min="1" max="1000000" value="" onchange="controle()">
 
-                <label for="prixUnit">Prix unitaire</label>
-                <input type="text" name="prixUnit" id="prixUnit" value="">
+                <label for="qte">Quantity:</label>
+                <input type="number" id="qte" onchange="controle()">
 
-                <label for="prix">Prix</label>
-                <input type="text" name="prix" id="prix" value="">
+                <label for="prixunit">Unit Price:</label>
+                <input type="number" id="prixunit" onchange="controle()">
 
+                <label for="totaux">Total:</label>
+                <input type="text" id="totaux" readonly>
             </div>
             <div>
-                <label for="qte">Qté</label>
-                <input type="number" name="qte" id="qte" min="1" max="1000000" value="" onchange="controle()">
 
-                <label for="prixUnit">Prix unitaire</label>
-                <input type="text" name="prixUnit" id="prixUnit" value="">
+                <label for="qte">Quantity:</label>
+                <input type="number" id="qte" onchange="controle()">
 
-                <label for="prix">Prix</label>
-                <input type="text" name="prix" id="prix" value="">
+                <label for="prixunit">Unit Price:</label>
+                <input type="number" id="prixunit" onchange="controle()">
 
+                <label for="totaux">Total:</label>
+                <input type="text" id="totaux" readonly>
             </div>
-            <div style="float: right; margin: 10px;">
-                <label for="totaux">totaux</label>
-                <input type="text" name="totaux" id="totaux" value="">
-            </div>
+            <input type="text" id="totauxTousPrix" readonly>
+            
         </fieldset>
     </form>
 </body>
