--- a/JS/Exercice_2/index.html
+++ b/JS/Exercice_2/index.html
@@ -14,28 +14,28 @@
         <fieldset>
             <div>
 
-                <label for="qte">Quantity:</label>
-                <input type="number" id="qte" onchange="controle()">
+                <label for="qte1">Quantity:</label>
+                <input type="number" id="qte1" onchange="controle()">
 
-                <label for="prixunit">Unit Price:</label>
-                <input type="number" id="prixunit" onchange="controle()">
+                <label for="prixunit1">Unit Price:</label>
+                <input type="number" id="prixunit1" onchange="controle()">
 
                 <label for="totaux">Total:</label>
-                <input type="text" id="totaux" readonly>
+                <input type="number" id="totaux">
             </div>
             <div>
 
-                <label for="qte">Quantity:</label>
-                <input type="number" id="qte" onchange="controle()">
+                <label for="qte2">Quantity:</label>
+                <input type="number" id="qte2" onchange="controle()">
 
-                <label for="prixunit">Unit Price:</label>
-                <input type="number" id="prixunit" onchange="controle()">
+                <label for="prixunit2">Unit Price:</label>
+                <input type="number" id="prixunit2" onchange="controle()">
 
-                <label for="totaux">Total:</label>
-                <input type="text" id="totaux" readonly>
+                <label for="totaux2">Total:</label>
+                <input type="number" id="totaux2">
             </div>
-            <input type="text" id="totauxTousPrix" readonly>
-            
+
+
         </fieldset>
     </form>
 </body>
