--- a/Html_CSS/mobile_First/index.html
+++ b/Html_CSS/mobile_First/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Mobile first</title>
 </head>
+
 <body>
-    <header class="box"></header>
+    <header class="box">
+        <span class="logo">logo</span>
+        <nav>
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">princing</a></li>
+                <li><a href="#">produits</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <main class="box"></main>
-    <section id="produits" class="box"></section>
-    <section id="carte_cadeau"></section>
+    <section  class="box"id="about"></section>
+    <section class="box" id="produits"></section>
+    <section  class="box"id="pricing"></section>
+    <section  class="box"id="contact"></section>
+
     <footer class="box"></footer>
 </body>
+
 </html>
