--- a/JS/Bases/Base2/index.html
+++ b/JS/Bases/Base2/index.html
@@ -4,12 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <script src="main.js" defer></script>
+    
     <title>Base 2</title>
 </head>
 
 <body>
-    <div id="app"></div>
+    <header>
+        <span class="logo">logo</span>
+        <nav >
+            <ul id="menu">
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">services</a></li>
+                <li><a href="#">princing</a></li>
+                <li><a href="#">portfolio</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </nav>
+        <div id="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </header>
+    <main id="banner"></main>
 </body>
 
 </html>
