--- a/Html_CSS/cards/index.html
+++ b/Html_CSS/cards/index.html
@@ -5,16 +5,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
-    <div class="bloc">
-        <div class="bloc_anime bloc_main"></div>
-        <div class="bloc_anime bloc_main"></div>
-        <div class="bloc_anime bloc_main"></div>
-        <div class="bloc_anime bloc_main"></div>
-    </div>
+    <header>
+        <span class="logo">
+            <h1>SS <span>.</span></h1>
+        </span>
+        <nav>
+            <ul id="menu_Items">
+                <li><a href="#" class="item">Accueil</a></li>
+                <li><a href="#" class="item">A propos</a></li>
+                <li><a href="#" class="item">Competences</a></li>
+                <li><a href="#" class="item">Expériences</a></li>
+                <li><a href="#" class="item">Portfolio</a></li>
+                <li><a href="#" class="item">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="fil_ariane"></div>
+    <main>
+        <article class="container">
+            <article class="banner_items">
+                <h1>Samba <span>SENE</span> <span>.</span></h1>
+                <hr>
+                <div class="banner_items_link">
+                    <a href="#" class="link">linkedin</a>
+                    <a href="#" class="link">gitHub</a>
+                    <a href="#" class="link">instagram</a>
+                </div>
+                <a href="#" class="btn">Contactez moi</a>
+            </article>
+            <article class="banner_center"></article>
+            <article class="banner_right">
+                <h4>A propos</h4>
+                <h1>Developpeur web et mobile</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sequi ratione ipsum atque unde quidem,
+                    fugiat magnam natus recusandae! Assumenda.</p>
+                <a href="#" class="learn_more">Learn more</a>
+            </article>
+
+        </article>
+    </main>
+    <section id="competences">
+        <h1>Compétences</h1>
+        <h4>Lorem ipsum dolor sit amet consectetur.</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur reiciendis eius atque? Adipisci, nisi ex.
+        </p>
+        <article class="container_competences_items">
+            <article class="card">front-end</article>
+            <article class="card">back-end</article>
+            <article class="card">gestion de projet</article>
+        </article>
+    </section>
+    <section id="portfolio">
+        <article class="conatainer_portfolio">
+            <article class="portfolio_item"></article>
+            <article class="portfolio_item"></article>
+            <article class="portfolio_item"></article>
+            <article class="portfolio_item"></article>
+            <article class="portfolio_item"></article>
+        </article>
+    </section>
+    <section id="contact">
+        <form action="" method="post">
+            <fieldset>
+                <div>
+                    <input type="text" name="name" id="name" placeholder="Votre prenom">
+                    <input type="text" name="lastname" id="lastname" placeholder="Votre nom ">
+                </div>
+                <div>
+                    <input type="email" name="email" id="email" placeholder="Votre email ">
+                </div>
+                <div>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="votre message"></textarea>
+                </div>
+                <input type="submit" class="btn" value="Envoyer">
+            </fieldset>
+        </form>
+    </section>
+    <footer>
+        &copy; Copyright - Samba 2023
+    </footer>
 </body>
 
 </html>
