--- a/JS/Exercice_3/inscriptionAstro.html
+++ b/JS/Exercice_3/inscriptionAstro.html
@@ -34,59 +34,9 @@
                         <input type="email" name="emailUtilisateur" id="emailUtilisateur">
                     </div>
                     <div>
-                        <label for="jourNaissance">Jour</label>
-                        <select name="jour" id="jourNaissance">
-                            <option value="1">1</option>
-                            <option value="1">2</option>
-                            <option value="1">3</option>
-                            <option value="1">4</option>
-                            <option value="1">5</option>
-                            <option value="1">6</option>
-                            <option value="1">7</option>
-                            <option value="1">8</option>
-                            <option value="1">9</option>
-                            <option value="1">10</option>
-                            <option value="1">11</option>
-                            <option value="1">12</option>
-                            <option value="1">13</option>
-                            <option value="1">14</option>
-                            <option value="1">15</option>
-                            <option value="1">16</option>
-                            <option value="1">17</option>
-                            <option value="1">18</option>
-                            <option value="1">19</option>
-                            <option value="1">20</option>
-                            <option value="1">21</option>
-                            <option value="1">22</option>
-                            <option value="1">23</option>
-                            <option value="1">24</option>
-                            <option value="1">25</option>
-                            <option value="1">26</option>
-                            <option value="1">27</option>
-                            <option value="1">28</option>
-                            <option value="1">29</option>
-                            <option value="1">30</option>
-                            <option value="1">31</option>
-                        </select>
-
-                        <label for="moisNaissance">Mois</label>
-                        <select name="mois" id="moisNaissance">
-                            <option value="1" onclick="calculerSign()">Janvier</option>
-                            <option value="fevrier">Fevrier</option>
-                            <option value="mars">Mars</option>
-                            <option value="avril">Avril</option>
-                            <option value="mai">Mai</option>
-                            <option value="juin">Juin</option>
-                            <option value="juillet">Juillet</option>
-                            <option value="aout">Aout</option>
-                            <option value="septembre">Septembre</option>
-                            <option value="octobre">Octobre</option>
-                            <option value="novembre">Novembre</option>
-                            <option value="decembre">Decembre</option>
-                        </select>
+                        <label for="dateNaissance">Date de naissance</label>
+                        <input type="date" name="dateNaissance" id="dateNaissance" >
                         
-
-
                     </div>
                     <div>
                        
