--- a/JS/Exercice_3/inscriptionAstro.html
+++ b/JS/Exercice_3/inscriptionAstro.html
@@ -20,30 +20,83 @@
 
                     <legend>Texte libre</legend>
                     <div>
-                        <textarea name="texte_libre" id="texte_libre" cols="30" rows="5" >texte  libre</textarea>
+                        <textarea name="texte_libre" id="texte_libre" cols="30" rows="5">texte  libre</textarea>
                     </div>
                     <div>
                         <label for="nomUtilisateur">Nom utilisateur</label>
-                        <input type="text" name="nomUtilisateur" id="nomUtilisateur" onblur="valNum()" >
+                        <input type="text" name="nomUtilisateur" id="nomUtilisateur">
                     </div>
                     <div>
                         <label for="prenomUtilisateur">Prenom </label>
-                        <input type="text" name="prenomUtilisateur" id="prenomUtilisateur" onblur="valNum()">
+                        <input type="text" name="prenomUtilisateur" id="prenomUtilisateur">
 
                         <label for="emailUtilisateur">Email</label>
                         <input type="email" name="emailUtilisateur" id="emailUtilisateur">
                     </div>
                     <div>
-                        <label for="dateNaissance">Date de naissance</label>
-                        <input type="date" name="dateNaissance" id="dateNaissance" >
-                        
+                        <label for="jour">Jour</label>
+                        <select name="jour" id="jour">
+                            <option value="">Jour</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                            <option value="12">12</option>
+                            <option value="13">13</option>
+                            <option value="14">14</option>
+                            <option value="15">15</option>
+                            <option value="16">16</option>
+                            <option value="17">17</option>
+                            <option value="18">18</option>
+                            <option value="19">19</option>
+                            <option value="20">20</option>
+                            <option value="21">21</option>
+                            <option value="22">22</option>
+                            <option value="23">23</option>
+                            <option value="24">24</option>
+                            <option value="25">25</option>
+                            <option value="26">26</option>
+                            <option value="27">27</option>
+                            <option value="28">28</option>
+                            <option value="29">29</option>
+                            <option value="30">30</option>
+                            <option value="31">31</option>
+                        </select>
+                        <label for="mois">Mois</label>
+                        <select name="dateNaissance" id="mois">
+                            <option value="">Mois de naissance</option>
+                            <option value="1">Janvier</option>
+                            <option value="2">Fevrier</option>
+                            <option value="3">Mars</option>
+                            <option value="4">Avril</option>
+                            <option value="5">Mai </option>
+                            <option value="6">Juin</option>
+                            <option value="7">Juillet</option>
+                            <option value="8">Aout</option>
+                            <option value="9">Septembre</option>
+                            <option value="10">Octobre</option>
+                            <option value="11">Novembre</option>
+                            <option value="12">Decembre</option>
+                        </select>
+
                     </div>
                     <div>
-                       
+                        <label for="annee">Année</label>
+
+                    </div>
+                    <div>
+
                     </div>
                     <div>
                         <label for="pseudo">Afficher votre pseudo</label>
-                        <input type="text" name="pseudo" id="pseudo" >
+                        <input type="text" name="pseudo" id="pseudo">
                     </div>
 
                     <input type="button" value="Validation" class="btn" disabled>
