--- a/JS/Exercice_3/inscriptionAstro.html
+++ b/JS/Exercice_3/inscriptionAstro.html
@@ -88,7 +88,7 @@
 
                     </div>
                     <div>
-                        <label for="annee">Année</label>
+                        
 
                     </div>
                     <div>
@@ -96,10 +96,10 @@
                     </div>
                     <div>
                         <label for="pseudo">Afficher votre pseudo</label>
-                        <input type="text" name="pseudo" id="pseudo">
+                        <input type="text" name="pseudo" id="pseudo" onclick="calculerPseudo()">
                     </div>
 
-                    <input type="button" value="Validation" class="btn" disabled>
+                    <input type="button" value="Validation" class="btn" id="valider">
                     <input type="reset" value="Annuler" class="btn">
 
                 </form>
