--- a/JS/Exercice_3/Accueil.html
+++ b/JS/Exercice_3/Accueil.html
@@ -8,6 +8,18 @@
     <title>Astro</title>
 </head>
 <body>
-    <div id="nbjoursRestants"></div>
+    <div id="nbJoursRestants">
+        <table>
+            <tr>
+                <th>Nom</th>
+                <th>Prénom</th>
+            </tr>
+            <tbody>
+                <td id="nomCookie"></td>
+                <td id="prenomCookie"></td>
+                <td></td>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
