--- a/JS/Exercice_3/inscriptionAstro.html
+++ b/JS/Exercice_3/inscriptionAstro.html
@@ -33,7 +33,7 @@
                         <label for="emailUtilisateur">Email</label>
                         <input type="email" name="emailUtilisateur" id="emailUtilisateur">
                     </div>
-                    <div>
+                    <div id="dateNaissance">
                         <label for="jour">Jour</label>
                         <select name="jour" id="jour">
                             <!-- <option value="0">Choisissez votre jour</option> -->
