--- a/JS/Exercice_3/Accueil.html
+++ b/JS/Exercice_3/Accueil.html
@@ -8,18 +8,16 @@
     <title>Astro</title>
 </head>
 <body>
-    <div id="nbJoursRestants">
-        <table>
+    <table border="1">
+        <thead>
             <tr>
-                <th>Nom</th>
-                <th>Prénom</th>
+                <th>Nom du Cookie</th>
+                <th>Valeur du Cookie</th>
             </tr>
-            <tbody>
-                <td id="nomCookie"></td>
-                <td id="prenomCookie"></td>
-                <td></td>
-            </tbody>
-        </table>
-    </div>
+        </thead>
+        <tbody id="cookieTable">
+           
+        </tbody>
+    </table>
 </body>
 </html>
