--- a/JS/Exercice_3/Accueil.html
+++ b/JS/Exercice_3/Accueil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="./js/main.js" defer></script>
+    <script src="./js/mainArticle.js" defer></script>
     <title>Astro</title>
 </head>
 <body>
