--- a/JS/jeux_carte/index.html
+++ b/JS/jeux_carte/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="fr-fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <script src="./js/main.js" defer></script>
-    <title>Meal</title>
+    <title>Jeux de carte</title>
 </head>
 
 <body>
-    <header id="menu"></header>
-    <main id="banner"></main>
-    <section id="content"></section>
-    <section id="content_services"></section>
-    <footer id="footer"></footer>
+    <header>
+        <h1>Jeux de carte</h1>
+    </header>
+    <tabe id="tableau"></tabe>
 </body>
 
 </html>
