--- a/JS/jeux_carte/index.html
+++ b/JS/jeux_carte/index.html
@@ -13,7 +13,10 @@
     <header>
         <h1>Jeux de carte</h1>
     </header>
-    <tabe id="tableau"></tabe>
+    <table>
+        <tr id="head"></tr>
+        <tr id="body"></tr>
+    </table>
 </body>
 
 </html>
