--- a/JS/jeux_carte/index.html
+++ b/JS/jeux_carte/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <script src="./js/main.js" defer></script>
+    <!-- <link rel="stylesheet" href="./css/styles.css"> -->
+    <script src="./js/script.js" defer></script>
+    <!-- <script src="./js/main.js" defer></script> -->
     <title>Jeux de carte</title>
 </head>
 
@@ -13,7 +14,7 @@
     <header>
         <h1>Jeux de carte</h1>
     </header>
-    
+    <table id="table"></table>
 </body>
 
 </html>
