--- a/JS/Introduction aux dates/index.html
+++ b/JS/Introduction aux dates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <script src="./assets/js/main.js" defer></script>
+    <script src="./assets/js/main.js" type="module"></script>
+    <script src="./assets/js/MaClasse.js" type="module"></script>
     <title>Document</title>
 </head>
 <body>
