--- a/JS/LesDate/LesSignesAstros/index.html
+++ b/JS/LesDate/LesSignesAstros/index.html
@@ -12,10 +12,12 @@
         <form>
             <h1>Ma date de naissance </h1>
             <label for="dateNaissance">Date de naissance :</label>
-            <input type="datetime-local" name="date" id="dateNaissance" value="1985/01/23">
+            <input type="datetime-local" name="date" id="dateNaissance">
             <button type="button" id="calculer">Calculer</button>
             <hr>
             <div id="resultat"></div>
+            <hr>
+            <div id="signesZodiac"></div>
         </form>
     </main>
 </body>
