--- a/JS/intervalles_temporelles/index.html
+++ b/JS/intervalles_temporelles/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <form >
-            <h1>Gestion des dates et intervalles</h1>
+            <!-- <h1>Gestion des dates et intervalles</h1> -->
             <label for="dateActu">Date actuelle :</label>
             <input type="date" name="date" id="dateActu">
 
@@ -20,17 +20,16 @@
             <button type="button" id="valider">Afficher date du jour</button>
         </form>
         <hr>
-        <div class="datejour">Afficher date du jour _ heure courante</div>
+        <div id="dateHeureJour"></div>
         <hr>
         <form >
-            <h1>Selectionner une date et une heure</h1>
+            <!-- <h1>Selectionner une date et une heure</h1> -->
             <label for="dateInter">Date :</label>
             <input type="date" name="date" id="dateInter">
-
-           
-
-            <button type="button" id="calculer">Calculer l'intervalle</button>
+            <button type="button" id="calculer">Calculer</button>
         </form>
+        <hr>
+        <div id="dateIntervale"></div>
     </main>
 
 
